tenants/le-portail/applications/production/wordpress/jardinsvedas/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-jardinsvedas
  namespace: ${tenant}-wordpress-jardinsvedas
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jardinsvedas.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
    - match: Host(`epi-libres.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
    - match: Host(`epis-libres.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
  tls:
    secretName: wildcard.${domain}.tls
